--- a/admin/pages/edit-password-admin.html
+++ b/admin/pages/edit-password-admin.html
@@ -72,7 +72,8 @@
                 <div class="form-staff">
                     <label class="section">ยืนยันรหัสผ่านอีกครั้ง</label>
                     <div class="section-turn">
-                        <input type="password" value="" id="confirm-password-again" placeholder="ยืนยันรหัสผ่านอีกครั้ง">
+                        <input type="password" value="" id="confirm-password-again"
+                            placeholder="ยืนยันรหัสผ่านอีกครั้ง">
                         <img class="turn-off" src="../assets/icons/ic-turn off.png" onclick="myconfirm()">
                         <img class="turn-on" src="../assets/icons/Group-showpassword.png" style="display: none;"
                             onclick="eyeclose()">
@@ -106,18 +107,18 @@
                 x.type = "password";
 
             }
-            var x = document.getElementById("close-new-password");
-            if (x.type === "password") {
-                x.type = "text";
-            } else {
-                x.type = "password";
-            }
-            var x = document.getElementById("confirm-password-again");
-            if (x.type === "password") {
-                x.type = "text";
-            } else {
-                x.type = "password";
-            }
+            // var x = document.getElementById("close-new-password");
+            // if (x.type === "password") {
+            //     x.type = "text";
+            // } else {
+            //     x.type = "password";
+            // }
+            // var x = document.getElementById("confirm-password-again");
+            // if (x.type === "password") {
+            //     x.type = "text";
+            // } else {
+            //     x.type = "password";
+            // }
         }
         function show() {
             console.log(y)
@@ -144,16 +145,16 @@
             } else {
                 x.type = "password";
             }
-            var x = document.getElementById("confirm-password-again");
-            if (x.type === "password") {
-                x.type = "text";
-            } else {
-                x.type = "password";
-            }
+            // var x = document.getElementById("confirm-password-again");
+            // if (x.type === "password") {
+            //     x.type = "text";
+            // } else {
+            //     x.type = "password";
+            // }
         }
         function eyeshow() {
             console.log("dhtf")
-            var x = document.getElementById("myInput");
+            var x = document.getElementById("close-new-password");
             var z = document.getElementsByClassName("turn-on");
             z[1].style.display = "none";
             var y = document.getElementsByClassName("turn-off");
@@ -179,7 +180,7 @@
         }
         function eyeclose() {
             console.log("dhtf")
-            var x = document.getElementById("myInput");
+            var x = document.getElementById("confirm-password-again");
             var z = document.getElementsByClassName("turn-on");
             z[2].style.display = "none";
             var y = document.getElementsByClassName("turn-off");
