--- a/admin/pages/staff-info/add.html
+++ b/admin/pages/staff-info/add.html
@@ -72,6 +72,14 @@
                     <input class="message" type="password" name="password" placeholder="รหัสผ่าน">
                 </div>
                 <div class="form-staff">
+                    <label class="section">ตำแหน่ง</label>
+                    <input class="message" type="text" name="note" placeholder="ตำแหน่ง">
+                </div>
+                <div class="form-staff">
+                    <label class="section">ที่อยู่</label>
+                    <input class="message" type="text" name="note" placeholder="ที่อยู่">
+                </div>
+                <div class="form-staff">
                     <label class="section">หมายเหตุ</label>
                     <input class="message" type="text" name="note" placeholder="หมายเหตุ">
                 </div>
