--- a/admin/pages/staff-info/edit-password.html
+++ b/admin/pages/staff-info/edit-password.html
@@ -56,7 +56,8 @@
                     <div class="section-turn">
                         <input type="password" value="" id="myInput" placeholder="รหัสผ่านเดิม">
                         <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myFunction()">
-                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="show()">
+                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;"
+                            onclick="show()">
                     </div>
                 </div>
                 <div class="form-staff">
@@ -64,15 +65,18 @@
                     <div class="section-turn">
                         <input type="password" value="" id="close-new-password" placeholder="รหัสผ่านใหม่">
                         <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myturnoff()">
-                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="eyeshow()">
+                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;"
+                            onclick="eyeshow()">
                     </div>
                 </div>
                 <div class="form-staff">
                     <label class="section">ยืนยันรหัสผ่านอีกครั้ง</label>
                     <div class="section-turn">
-                        <input type="password" value="" id="confirm-password-again" placeholder="ยืนยันรหัสผ่านอีกครั้ง">
+                        <input type="password" value="" id="confirm-password-again"
+                            placeholder="ยืนยันรหัสผ่านอีกครั้ง">
                         <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myconfirm()">
-                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="eyeclose()">
+                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;"
+                            onclick="eyeclose()">
                     </div>
                 </div>
             </div>
@@ -88,103 +92,101 @@
     </div>
     <script>
         function myFunction() {
-                var x = document.getElementById("myInput");
-                var y = document.getElementsByClassName("turn-off");
-                y[0].style.display = "none";
-                var z = document.getElementsByClassName("turn-on");
-                z[0].style.display = "block";
-                
-                if (x.type === "password"){
-                    x.type = "text";
-                } else {
-                    x.type = "password";
+            var x = document.getElementById("myInput");
+            var y = document.getElementsByClassName("turn-off");
+            y[0].style.display = "none";
+            var z = document.getElementsByClassName("turn-on");
+            z[0].style.display = "block";
 
-                }
-                var x = document.getElementById("close-new-password");
-                if (x.type === "password") {
+            if (x.type === "password") {
                 x.type = "text";
-                } else {
+            } else {
                 x.type = "password";
-                }
-                var x = document.getElementById("confirm-password-again");
-                if (x.type === "password") {
-                    x.type = "text";
-                } else {
-                    x.type = "password";
-                }
-            }
-        function show () {
-                console.log(y)
-                var x = document.getElementById("myInput");
-                var z = document.getElementsByClassName("turn-on");
-                z[0].style.display = "none";
-                var y = document.getElementsByClassName("turn-off");
-                y[0].style.display = "block";
-                if (x.type === "password") {
-                    x.type = "text";
-                } else {
-                    x.type = "password";
 
-                }
             }
+            // var x = document.getElementById("close-new-password");
+            // if (x.type === "password") {
+            //     x.type = "text";
+            // } else {
+            //     x.type = "password";
+            // }
+            // var x = document.getElementById("confirm-password-again");
+            // if (x.type === "password") {
+            //     x.type = "text";
+            // } else {
+            //     x.type = "password";
+            // }
+        }
+        function show() {
+            var x = document.getElementById("myInput");
+            var z = document.getElementsByClassName("turn-on");
+            z[0].style.display = "none";
+            var y = document.getElementsByClassName("turn-off");
+            y[0].style.display = "block";
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+
+            }
+        }
         function myturnoff() {
-                var x = document.getElementById("close-new-password");
-                var y = document.getElementsByClassName("turn-off");
-                y[1].style.display = "none";
-                var z = document.getElementsByClassName("turn-on");
-                z[1].style.display = "block";
-                if (x.type === "password") {
-                    x.type = "text";
-                } else {
-                    x.type = "password";
-                }    
-                var x = document.getElementById("confirm-password-again");
-                if (x.type === "password") {
-                    x.type = "text";
-                } else {
-                    x.type = "password";
-                }
+            var x = document.getElementById("close-new-password");
+            var y = document.getElementsByClassName("turn-off");
+            y[1].style.display = "none";
+            var z = document.getElementsByClassName("turn-on");
+            z[1].style.display = "block";
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
             }
-            function eyeshow() {
-                    console.log("dhtf")
-                    var x = document.getElementById("myInput");
-                    var z = document.getElementsByClassName("turn-on");
-                    z[1].style.display = "none";
-                    var y = document.getElementsByClassName("turn-off");
-                    y[1].style.display = "block";
-                    if (x.type === "password") {
-                        x.type = "text";
-                    } else {
-                        x.type = "password";
+            // var x = document.getElementById("confirm-password-again");
+            // if (x.type === "password") {
+            //     x.type = "text";
+            // } else {
+            //     x.type = "password";
+            // }
+        }
+        function eyeshow() {
+            var x = document.getElementById("close-new-password");
+            var z = document.getElementsByClassName("turn-on");
+            z[1].style.display = "none";
+            var y = document.getElementsByClassName("turn-off");
+            y[1].style.display = "block";
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
 
-                    }
-                }
-            function myconfirm() {
-                    var x = document.getElementById("confirm-password-again");
-                    var y = document.getElementsByClassName("turn-off");
-                    y[2].style.display = "none";
-                    var z = document.getElementsByClassName("turn-on");
-                    z[2].style.display = "block";
-                    if (x.type === "password") {
-                    x.type = "text";
-                        } else {
-                            x.type = "password";
-                        }
-                }
-            function eyeclose() {
-                    console.log("dhtf")
-                    var x = document.getElementById("myInput");
-                    var z = document.getElementsByClassName("turn-on");
-                    z[2].style.display = "none";
-                    var y = document.getElementsByClassName("turn-off");
-                    y[2].style.display = "block";
-                    if (x.type === "password") {
-                        x.type = "text";
-                    } else {
-                        x.type = "password";
+            }
+        }
+        function myconfirm() {
+            var x = document.getElementById("confirm-password-again");
+            var y = document.getElementsByClassName("turn-off");
+            y[2].style.display = "none";
+            var z = document.getElementsByClassName("turn-on");
+            z[2].style.display = "block";
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+        function eyeclose() {
+            console.log("dhtf")
+            var x = document.getElementById("confirm-password-again");
+            var z = document.getElementsByClassName("turn-on");
+            z[2].style.display = "none";
+            var y = document.getElementsByClassName("turn-off");
+            y[2].style.display = "block";
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
 
-                    }
-                    }
+            }
+        }
 
     </script>
 
