--- a/admin/pages/staff-info/edit.html
+++ b/admin/pages/staff-info/edit.html
@@ -72,6 +72,18 @@
                     <input class="message" type="text" name="username" placeholder="ชื่อผู้ใช้">
                 </div>
                 <div class="form-staff">
+                    <label class="section">รหัสผ่าน</label>
+                    <input class="message" type="text" name="note" placeholder="รหัสผ่าน">
+                </div>
+                <div class="form-staff">
+                    <label class="section">ตำแหน่ง</label>
+                    <input class="message" type="text" name="note" placeholder="ตำแหน่ง">
+                </div>
+                <div class="form-staff">
+                    <label class="section">ที่อยู่</label>
+                    <input class="message" type="text" name="note" placeholder="ที่อยู่">
+                </div>
+                <div class="form-staff">
                     <label class="section">หมายเหตุ</label>
                     <input class="message" type="text" name="note" placeholder="หมายเหตุ">
                 </div>
